--- a/app/src/main/res/layout/earthquake_item.xml
+++ b/app/src/main/res/layout/earthquake_item.xml
@@ -3,26 +3,56 @@
     android:layout_width="match_parent"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp">
 
     <TextView
         android:id="@+id/magnitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_weight="3"
-        android:textAlignment="center"
-        android:layout_height="50dp" />
-    <TextView
-        android:id="@+id/placeTextView"
-        android:layout_weight="3"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_width="36dp"
+
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/magnitude_circle"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        />
+    <LinearLayout
+        android:paddingLeft="10dp"
+        android:orientation="vertical"
+        android:layout_width="250dp"
+        android:layout_height="match_parent">
+        <TextView
+
+            android:textAlignment="textStart"
+            android:layout_gravity="start"
+            android:id="@+id/directionTextId"
+            android:layout_weight="1"
+            android:textSize="14dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+        <TextView
+            android:textAlignment="textStart"
+            android:layout_gravity="start"
+
+            android:textStyle="bold"
+            android:textSize="14dp"
+            android:id="@+id/exactPlaceTextId"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+
+            android:layout_width="match_parent"
+             />
+
+    </LinearLayout>
+
+
 
     <TextView
+        android:layout_weight="4"
         android:id="@+id/dateTextView"
-        android:layout_weight="3"
         android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_width="36dp"
+        android:layout_height="36dp" />
 
 </LinearLayout>
