--- a/app/src/main/res/layout/earthquake_item.xml
+++ b/app/src/main/res/layout/earthquake_item.xml
@@ -1,14 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
-    android:layout_height="60dp">
+    android:paddingEnd="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingStart="16dp">
 
     <TextView
-        android:id="@+id/magnitudeTextView"
+        android:id="@+id/magnitude"
         android:layout_width="36dp"
-
         android:layout_height="36dp"
         android:layout_gravity="center_vertical"
         android:background="@drawable/magnitude_circle"
@@ -16,43 +19,66 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        />
+        tools:text="8.9" />
+
     <LinearLayout
-        android:paddingLeft="10dp"
-        android:orientation="vertical"
-        android:layout_width="250dp"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
+            android:id="@+id/location_offset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:textAllCaps="true"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"
+            tools:text="30km S of" />
 
-            android:textAlignment="textStart"
-            android:layout_gravity="start"
-            android:id="@+id/directionTextId"
-            android:layout_weight="1"
-            android:textSize="14dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
         <TextView
-            android:textAlignment="textStart"
-            android:layout_gravity="start"
-
-            android:textStyle="bold"
-            android:textSize="14dp"
-            android:id="@+id/exactPlaceTextId"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-
-            android:layout_width="match_parent"
-             />
+            android:id="@+id/primary_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textColor="@color/textColorEarthquakeLocation"
+            android:textSize="16sp"
+            tools:text="Long placeholder location that should wrap to more than 2 lines of text" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"
+            tools:text="Mar 6, 2010" />
 
-    <TextView
-        android:layout_weight="4"
-        android:id="@+id/dateTextView"
-        android:textAlignment="center"
-        android:layout_width="36dp"
-        android:layout_height="36dp" />
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"
+            tools:text="3:00 PM" />
 
+    </LinearLayout>
 </LinearLayout>
